--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  
+    min-height: 100vh;
+    background: url("/public/images/background.webp") no-repeat center;
+    background-size: cover;
   
 }
 
