--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
     min-height: 100vh;
-    
     background: url("/public/images/background.webp") no-repeat center;
+    background-color: rgba(0,0,0,0.1);
     background-size: cover;
     background-attachment: fixed;
   
